# beforefx

./: Cargo.toml  readme.md
.github/workflows/: mac-compile.yml
example-project/: sample.bfx
src/: core.rs  main.rs  ui_utils.rs
